[package]
name = "libp2p-auto-relay"
version = "0.1.0"
edition = "2021"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
license = "MIT"
repository = "https://github.com/Sherlock-Holo/libp2p-auto-relay"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asynchronous-codec = "0.6"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = "0.3"
libp2p-core = "0.38"
libp2p-swarm = "0.41"
prost-codec = "0.3"
prost = "0.11"
thiserror = "1"
tracing = "0.1"
tap = "1"

[build-dependencies]
prost-build = "0.11"
