[package]
name = "libp2p-auto-relay"
version = "0.1.2"
edition = "2021"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
license = "MIT"
repository = "https://github.com/Sherlock-Holo/libp2p-auto-relay"
description = "libp2p auto relay library"
build = "build.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["combine"]
combine = ["dep:pin-project"]

[dependencies]
asynchronous-codec = "0.6"
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = "0.3"
libp2p-core = "0.38"
libp2p-swarm = "0.41"
prost-codec = "0.3"
prost = "0.11"
thiserror = "1"
tracing = "0.1"
tap = "1"
pin-project = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
libp2p-noise = "0.41"
libp2p-yamux = "0.42"
libp2p = { version = "0.50", features = ["macros", "ping"] }
libp2p-swarm = { version = "0.41", features = ["tokio"] }
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.11"
